[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cmyt"
version = "2.0.1"
description = "A collection of Matplotlib colormaps from the yt project"
authors = [
    { name = "The yt project", email = "yt-dev@python.org" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Matplotlib",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: AIX",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Visualization",
    "Typing :: Typed",
]
keywords = [
    "visualization",
]
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.8.0",
    "numpy>=1.26.0, <3",
]

[project.license]
text = "BSD 3-Clause"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://yt-project.org/"
Source = "https://github.com/yt-project/cmyt/"
Tracker = "https://github.com/yt-project/cmyt/issues"

[dependency-groups]
typecheck = [
    "mypy>=1.5.1",
]
test = [
    "colorspacious>=1.1.2",
    "pytest-mpl>=0.13",
    "pytest>=6.2.4",
]

[tool.hatch.build.targets.sdist]
exclude = [
    ".*",  # exclude dot files (.gitignore is still included)
    "doc",
    "tests",
]

[tool.ruff.lint]
exclude = ["*__init__.py"]
ignore = ["E501"]
select = [
    "E",
    "F",
    "W",
    "C4",  # flake8-comprehensions
    "B",   # flake8-bugbear
    "TCH", # flake8-type-checking
    "YTT", # flake8-2020
    "I",   # isort
    "UP",  # pyupgrade
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_unused_ignores = true
warn_unreachable = true
show_error_context = true
show_error_codes = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = true
ignore_errors = true

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    'ignore:datetime\.datetime\.utcfromtimestamp\(\) is deprecated:DeprecationWarning', # https://github.com/dateutil/dateutil/pull/1285
]
addopts = "--doctest-modules"
testpaths = ["tests"]
