[metadata]
name = cmyt
version = 0.1.0
description = A collection of Matplotlib colormaps from the yt project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yt-project/yt
author = The yt project
author_email = yt-dev@python.org
license = BSD 3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Framework :: Matplotlib
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: AIX
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Visualization
    Typing :: Typed
keywords = visualization
project_urls =
    Homepage=https://yt-project.org/
    Source=https://github.com/yt-project/cmyt/
    Tracker=https://github.com/yt-project/cmyt/issues

[options]
packages = find:
install_requires =
    matplotlib>=2.1.0
    more-itertools>=8.4
    numpy>=1.13.3
python_requires = >=3.6

[options.extras_require]
dev =
    pytest>=6.2.4
    pytest-cov>=2.12.1
    pytest-mpl>=0.13

[flake8]
ignore = E203, # Whitespace before ':'
    E501, # Line too long
    W503, # Line break occurred before a binary operator
exclude =
    *__init__.py
